Semester 2/Java/JustLang/src/at/grisa/just/example/ABParser.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options
{
  static = false;
}

PARSER_BEGIN(ABParser)
package at.grisa.just.example;

public class ABParser
{
  public static void main(String args []) throws ParseException
  {
    ABParser parser = new ABParser(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.print("Enter an expression like \"a(b)*;\" :");
      try
      {
        switch (parser.one_line())
        {
          case 0 : 
          System.out.println("OK.");
          break;
          case 1 : 
          System.out.println("Goodbye.");
          break;
          default : 
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        break;
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }
}

PARSER_END(ABParser)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN :
{
  < A : "a" >
| < B : "b" >
}

int one_line() :
{}
{
  start() ";"
  {
    return 0;
  }
| ";"
  {
    return 1;
  }
}

void start() :
{}
{
  < A > b()
}

void b():
{}
{
  (< B >)*
}
